[tool.poetry]
name = "merqato_assignment"
version = "0.1.0"
description = "forecasting analysis for strawberry prices"
authors = ["Vaibhav Vaidya <vaibhavvinayak08@gmail.com>"]
readme = "README.md"

# include main python scripts
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.11.8"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
shap = "^0.45.1"
plotly = "^5.15.0"
darts = "^0.27.2"
ipykernel = "^6.29.5"
nbformat = "^5.10.4"
kaleido = "0.2.1"
lightgbm = "^4.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
